2007-04-02  Fabio Marzocca  <thesaltydog@gmail.com>

	* data/baobab.desktop.in.in:
	BUGZILLA #425530 - Better tooltip required

2007-03-28  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/callbacks.c: (on_about_activate):
        BUGZILLA: #421922 - cryptic license tab 

2007-03-12  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-prefs.c: (create_props_model), (create_tree_props),
	(fill_props_model):
	* src/baobab-prefs.h:

	Added filesystem total/available size for each mount point in
        preferences window

2007-02-26  Paolo Borelli  <pborelli@katamail.com>

	* src/baoab-treeview.c:
	* src/callbacks.c:

	Resort when toggling "allocated space".

2007-02-26  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab.c: (start_proc_on_dir):

	BUGZILLA: #411867 - baobab crashed with SIGSEGV 
	in pango_fc_font_lock_face()

2007-02-08  Dennis Cranston  <dennis_cranston@yahoo.com>

	* data/baobab.glade: Add tooltip to refresh toolbar button.

2007-01-09  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-ringschart.c: do not assert that percentage
	is > 0, it can be -1 when the scan is stopped.

2007-01-04  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c:
	* src/baobab-treeview.c:
	* src/baobab-ringschart.c:
	* src/baobab-utils.c:

	Turn the percentage column is a double, since ringschart
	uses it for display calculation and since the progress cell
	renderer uses doubles. Percentage set to -1 now means that
	analysis is in progress.
	Drop the percentual text string from the model, we can use
	a simple cell_data_function and save some memory.

2006-12-26  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-ringschart.c:
	* src/baobab-tree-map.c:

	Small cleanups.

2006-12-12  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-ringschart.c (baobab_ringschart_motion_notify):
	simplify logic and fix drawing problem of the central circle
	when crossing the x axis.

2006-11-05 Alejandro G. Castro <acastro@igalia.com>
