@@ -1,3 +1,8 @@
+2007-06-03  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab-utils.c: make sure that file chooser pointer
+	is nullified upon destruction.
+
 2007-04-02  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* data/baobab.desktop.in.in:
